File upload page UIs

--- a/agmip-submission.ipynb
+++ b/agmip-submission.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
+   "id": "e2dadcab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
+   "id": "de2eb1cc",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +33,8 @@
        "    --light-grey: #D3D3D3;\n",
        "}\n",
        "\n",
-       "/* Style basic HTML elements */\n",
+       "\n",
+       "/*** Style basic HTML elements ***/\n",
        "\n",
        ".selmono {\n",
        "    font-family: \"Lucida Console\", Monaco, monospace !important;\n",
@@ -44,11 +47,57 @@
        "                              parent instead. */\n",
        "}\n",
        "\n",
-       "/* CSS classes for custom components. \n",
+       "\n",
+       "/*** CSS classes for custom components. \n",
        "   \n",
        "   To avoid name clashes with the existing classes used by ipywidgets, \n",
        "   their names are prepended with \"c\" for \"custom\". The name also follows BEM convention. \n",
-       "*/\n",
+       "***/\n",
+       "\n",
+       "/* Snackbar */\n",
+       ".c-snackbar {\n",
+       "    width: 365px;\n",
+       "    height: 36px;\n",
+       "    padding: 0px 10px 0px 16px;\n",
+       "    display: flex;\n",
+       "    justify-content: space-between;\n",
+       "    align-items: center;\n",
+       "    flex-flow: row nowrap;\n",
+       "    border-radius: 4px;\n",
+       "    background: var(--light-blue);\n",
+       "    color: white;\n",
+       "}\n",
+       ".c-snackbar__text {\n",
+       "    color: white;\n",
+       "}\n",
+       "\n",
+       "/* Icon button */\n",
+       ".c-icon-button {\n",
+       "    height: 24px !important;\n",
+       "    width: 24px !important;\n",
+       "    border-radius: 50% !important;\n",
+       "    background: transparent !important;\n",
+       "    color: white;\n",
+       "    font-size: 10px !important;\n",
+       "    line-height: 10px !important;\n",
+       "}\n",
+       ".c-icon-button:active {\n",
+       "    box-shadow: none !important;\n",
+       "}\n",
+       ".c-icon-button:hover{\n",
+       "    box-shadow: none !important;\n",
+       "}\n",
+       "\n",
+       "/* Text colors */\n",
+       ".c-text-light-grey {\n",
+       "    color: var(--grey);\n",
+       "}\n",
+       ".c-text-grey {\n",
+       "    color: var(--grey);\n",
+       "}\n",
+       ".c-text-white{\n",
+       "    color: white);\n",
+       "}\n",
        "\n",
        "/* Header bar */\n",
        ".c-header-bar {\n",
@@ -66,6 +115,7 @@
        "    align-items: center;\n",
        "}\n",
        ".c-stepper__number {\n",
+       "    font-size: 15px;\n",
        "    color: white;\n",
        "    height: 40px;\n",
        "    width: 40px;\n",
@@ -103,19 +153,100 @@
        "    color: var(--light-grey);\n",
        "}\n",
        "\n",
-       "/* Extend CSS classes used by native ipywidgets components */\n",
-       "\n",
-       "div.output_area {\n",
-       "    align-items: unset !important;\n",
-       "    padding: 0px 0px !important;\n",
+       "/* File upload area */\n",
+       ".c-upload-area {\n",
+       "    background: transparent;\n",
+       "    width: 500px;\n",
+       "    height: 200px;\n",
+       "    position: relative;\n",
+       "}\n",
+       ".c-upload-area__background,\n",
+       ".c-upload-area__overlay-button {\n",
+       "    width: 99% !important;     /*99%, instead of 100%, to avoid overflow*/\n",
+       "    height: 99% !important;\n",
+       "    background: transparent !important;\n",
+       "    border-radius: 15px;\n",
+       "    position: absolute;\n",
+       "    top: 0;\n",
+       "    left: 0;\n",
+       "    align-self: center;\n",
+       "}\n",
+       ".c-upload-area__background {\n",
+       "    color: var(--grey);\n",
+       "    border: 1px dashed var(--grey);\n",
+       "    display: flex !important;\n",
+       "    flex-flow: column nowrap !important;\n",
+       "    align-items: center !important;\n",
+       "    justify-content: center !important;        \n",
+       "}\n",
+       ".c-upload-area__overlay-button {\n",
+       "    color: transparent !important;\n",
+       "    z-index: 10;\n",
+       "}\n",
+       ".c-upload-area__overlay-button:hover {\n",
+       "    box-shadow: none !important;\n",
+       "}\n",
+       ".c-upload-area__overlay-button:active {\n",
+       "    color: transparent !important;\n",
+       "    background: transparent !important;\n",
+       "    outline: none !important;\n",
+       "}\n",
+       ".c-upload-area__overlay-button:focus {\n",
+       "    box-shadow: none !important;\n",
+       "    outline: none !important;\n",
+       "}\n",
+       ".c-upload-area__overlay-button:drag {\n",
+       "    box-shadow: none !important;\n",
+       "    outline: none !important;\n",
        "}\n",
        "\n",
+       "/*** Extend CSS classes used by native ipywidgets components ***/\n",
+       "\n",
+       "/* Change button style */\n",
+       ".jupyter-button {\n",
+       "    line-height: 36px;\n",
+       "    height: 36px;\n",
+       "    border-radius: 4px;\n",
+       "    background: var(--blue);\n",
+       "    color: white;\n",
+       "}\n",
+       ".jupyter-button:active:enabled {\n",
+       "    background: #6072fa;\n",
+       "    color: white;\n",
+       "}\n",
+       ".jupyter-button:active:disabled {\n",
+       "    background: var(--light-grey);\n",
+       "    color: white;\n",
+       "}\n",
+       ".jupyter-button:disabled {\n",
+       "    background: var(--light-grey);\n",
+       "    color: white;\n",
+       "}\n",
+       "\n",
+       "/* Remove margin that jupyter widgets have*/\n",
+       ".jupyter-widgets {\n",
+       "    margin: 0px 0px;\n",
+       "}\n",
+       "\n",
+       "/* Prevent display(\"style.html\") or other \"empty\" display() from taking up screen space */\n",
+       "div.output_subarea {\n",
+       "    padding: 0px 0px;   \n",
+       "}\n",
+       "\n",
+       "/* Position the component being displayed at the center of the output area */\n",
+       "div.output_area {\n",
+       "    justify-content: center !important;     \n",
+       "}\n",
+       "\n",
+       "/* These attributes were unset because they mess up flex stylings for ui.HTML components */\n",
        ".widget-html-content {\n",
-       "    /* These attributes were unset because they mess up flex stylings for ui.HTML components */\n",
        "    align-self: unset !important;       \n",
        "    flex-shrink: unset !important;\n",
        "    flex-grow: unset !important;\n",
        "}\n",
+       "\n",
+       "/*The following modification were made by the scsa project, which this project is based on*/\n",
+       "\n",
        ".widget-select > select {\n",
        "    font-family: monospace !important;\n",
        "}\n",
@@ -175,7 +306,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5a8e379484e4e548893015edf91be9c",
+       "model_id": "669465945f4d4ddab5c105edc06a9d3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -214,6 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d38bf8ae",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -235,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
